Add github repo URL
Also disable printing and fix broken link in README.

--- a/book.toml
+++ b/book.toml
@@ -6,4 +6,8 @@ src = "src"
 title = "drewthomas.dev"
 
 [output.html]
+git-repository-url = "https://github.com/CDThomas/drewthomas-dev"
 no-section-label = true
+
+[output.html.print]
+enable = false
