--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,14 @@ jobs:
         with:
           owner: rust-lang
           name: mdBook
+          version: 0.4.18
+
+      - name: Install mdBook Link-Check
+        uses: extractions/setup-crate@v1
+        with:
+          owner: Michael-F-Bryan
+          name: mdbook-linkcheck
+          version: 0.7.6
 
       - name: Generate static content for the book
         run: mdbook build
